<resources>
    <string name="app_name">My Brain Memory</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="register">Register</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="create_acc">Create your account</string>
    <string name="already_acc">Already have an account?</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_acc">Login to your account</string>
    <string name="memory">Memory</string>
    <string name="image_matching">Image Matching</string>
    <string name="jigsaw_puzzle">Jigsaw Puzzle</string>
    <string name="start">Start</string>
    <string name="difficulty_level">Difficulty Level</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="hint_password">Password</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="nextLevel">Next Level</string>
    <string name="play_again">Play Again</string>
    <string name="quit">Quit</string>
    <string name="changelevel">Change Level</string>
    <string name="restart">Restart</string>
    <string name="resume">Resume</string>
    <string name="retryLevel">Retry</string>
    <string name="score_board">Performance History</string>
    <string name="generate_report">Generate Report</string>
    <string name="access_patient_report">Access Patients Report</string>
</resources>