<?xml version="1.0" encoding="utf-8"?>
<!-- dialog_layout.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/text_pause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="PAUSED"
        android:gravity="center"
        android:textColor="@color/dark_brown"
        android:textSize="48sp"
        android:fontFamily="@font/baloo2_bold"/>
    <Button
        android:id="@+id/resume_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/onboard_button_bkg"
        android:layout_marginTop="48dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/resume" />
    <Button
        android:id="@+id/restart_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/onboard_button_bkg"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/restart" />
    <Button
        android:id="@+id/change_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/onboard_button_bkg"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/changelevel" />

    <Button
        android:id="@+id/quit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/onboard_button_bkg"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/quit" />

</LinearLayout>
