<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_pink"
    android:gravity="center"
    tools:context=".LoginScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/brain_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_back"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textColor="@color/dark_brown"
            tools:text="Welcome Back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/login_acc"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/red"
            tools:text="Login to your account" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:theme="@style/EditTextThemeOverlay"
                android:textColorHint="@color/dark_brown"
                app:boxStrokeColor="@color/dark_brown"
                app:boxBackgroundColor="@color/white"
                app:helperText="Enter email address"
                app:helperTextTextAppearance="@style/HelperTextAppearance"
                app:boxStrokeWidth="2dp"
                app:hintTextAppearance="@style/HintTextAppearance"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                android:layout_marginHorizontal="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="Email" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:theme="@style/EditTextThemeOverlay"
                android:textColorHint="@color/dark_brown"
                app:boxStrokeColor="@color/dark_brown"
                app:helperText="Enter password"
                app:helperTextTextAppearance="@style/HelperTextAppearance"
                app:hintTextAppearance="@style/HintTextAppearance"
                app:boxStrokeWidth="2dp"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                android:layout_marginHorizontal="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/hint_password" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/onboard_button_bkg"
                android:layout_marginTop="48dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/login" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/no_account"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/red"
                    tools:text="Don't have an account?" />
                <TextView
                    android:id="@+id/sign_up_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/signup"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textColor="@color/red"
                    tools:text="Sign Up" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible"
        android:background="@drawable/avatro_liner_bkg" />
</RelativeLayout>