<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_pink"
    android:gravity="start"
    tools:context=".WelcomeScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/avatro_liner_bkg"
            android:padding="8dp"
            android:weightSum="5">

            <LinearLayout
                android:id="@+id/brain_img"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/avator1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_weight="3">

                <TextView
                    android:id="@+id/name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/memory"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/light_pink"
                    tools:text="Username" />
            </LinearLayout>

        </LinearLayout>
        

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ll_game_menu"
            android:orientation="horizontal"
            android:layout_marginTop="32dp"
            android:weightSum="2"
            >
            <LinearLayout
                android:id="@+id/ll_image_matching"
                android:layout_width="0dp"
                android:layout_height="356dp"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:background="@drawable/avatro_liner_bkg"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="256dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/matching_icon" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:padding="4dp"
                    android:textColor="@color/light_pink"
                    android:textAlignment="center"
                    android:text="@string/image_matching" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_jigsaw_puzzle"
                android:layout_width="0dp"
                android:layout_height="356dp"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:weightSum="2"
                android:background="@drawable/avatro_liner_bkg"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="256dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/jigsaw_icon" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:padding="4dp"
                    android:textAlignment="center"
                    android:textColor="@color/light_pink"
                    android:text="@string/jigsaw_puzzle" />
            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/btn_generate_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/onboard_button_bkg"
            android:layout_marginTop="48dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/generate_report" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible"
        android:background="@drawable/avatro_liner_bkg" />


</RelativeLayout>